--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,8 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-upload_protocol = espota
-upload_port = 192.168.1.120
+;upload_protocol = espota
+;upload_port = 192.168.1.120
 lib_deps = 
 	bblanchon/ArduinoJson@5.13.4
 	knolleary/PubSubClient@^2.8
