--- a/platformio.ini
+++ b/platformio.ini
@@ -13,14 +13,15 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 upload_protocol = espota
-upload_port = 192.168.1.120
-lib_deps = 
-	bblanchon/ArduinoJson@5.13.4
+;upload_port = 192.168.1.134	; Den Thermostat
+;lib_deps = 
+	tzapu/WiFiManager@^0.16.0
 	knolleary/PubSubClient@^2.8
 	paulstoffregen/OneWire@^2.3.5
 	milesburton/DallasTemperature@^3.9.1
-	tzapu/WiFiManager@^0.16.0
 	evert-arias/EasyButton@^2.0.1
+	bblanchon/ArduinoJson @ ^6.17.3
+
 monitor_speed = 115200
 
 [platformio]
