--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,9 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-upload_protocol = espota
+;upload_protocol = espota
 ;upload_port = 192.168.1.134	; Den Thermostat
-;lib_deps = 
+lib_deps = 
 	tzapu/WiFiManager@^0.16.0
 	knolleary/PubSubClient@^2.8
 	paulstoffregen/OneWire@^2.3.5
