template console.cpp

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,8 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-;upload_protocol = espota
-;upload_port = 192.168.1.134	; Den Thermostat
+upload_protocol = espota
+upload_port = 192.168.1.134	; Den Thermostat
 lib_deps = 
 	tzapu/WiFiManager@^0.16.0
 	knolleary/PubSubClient@^2.8
