--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 upload_protocol = espota
-upload_port = 192.168.1.134	; Den Thermostat
+upload_port = 192.168.1.134
 lib_deps = 
 	tzapu/WiFiManager@^0.16.0
 	knolleary/PubSubClient@^2.8
@@ -21,7 +21,9 @@ lib_deps =
 	milesburton/DallasTemperature@^3.9.1
 	evert-arias/EasyButton@^2.0.1
 	bblanchon/ArduinoJson @ ^6.17.3
-
+	adafruit/Adafruit GFX Library@^1.10.7
+	adafruit/Adafruit SSD1306@^2.4.4
+	adafruit/Adafruit BusIO@^1.7.3
 monitor_speed = 115200
 
 [platformio]
