Isolated Button functionality for D1 mini

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,11 @@
 
 [env:nodemcuv2]
 platform = espressif8266
-board = nodemcuv2
+board = d1_mini_lite
 framework = arduino
-upload_protocol = espota
-upload_port = 192.168.1.134
+; ** Den Thermostat **
+;upload_protocol = espota
+;upload_port = 192.168.1.134
 lib_deps = 
 	tzapu/WiFiManager@^0.16.0
 	knolleary/PubSubClient@^2.8
