--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,8 @@ platform = espressif8266
 board = d1_mini_lite
 framework = arduino
 ; ** Den Thermostat **
-;upload_protocol = espota
-;upload_port = 192.168.1.134
+upload_protocol = espota
+upload_port = 192.168.1.106
 lib_deps = 
 	tzapu/WiFiManager@^0.16.0
 	knolleary/PubSubClient@^2.8
