--- a/platformio.ini
+++ b/platformio.ini
@@ -10,11 +10,11 @@
 
 [env:nodemcuv2]
 platform = espressif8266
-board = d1_mini_lite
+board = d1
 framework = arduino
 ; ** Den Thermostat **
 upload_protocol = espota
-upload_port = 192.168.1.106
+upload_port = 192.168.68.66
 lib_deps = 
 	tzapu/WiFiManager@^0.16.0
 	knolleary/PubSubClient@^2.8
@@ -27,5 +27,22 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.7.3
 monitor_speed = 115200
 
-[platformio]
-description = Drive Thermostats
+[env:LocalCOM3]
+platform = espressif8266
+board = d1
+framework = arduino
+; ** Den Thermostat **
+upload_protocol = esptool
+upload_port = COM3
+lib_deps = 
+	tzapu/WiFiManager@^0.16.0
+	knolleary/PubSubClient@^2.8
+	paulstoffregen/OneWire@^2.3.5
+	milesburton/DallasTemperature@^3.9.1
+	evert-arias/EasyButton@^2.0.1
+	bblanchon/ArduinoJson @ ^6.17.3
+	adafruit/Adafruit GFX Library@^1.10.7
+	adafruit/Adafruit SSD1306@^2.4.4
+	adafruit/Adafruit BusIO@^1.7.3
+monitor_speed = 115200
+
