--- a/platformio.ini
+++ b/platformio.ini
@@ -8,27 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
-platform = espressif8266
-board = d1
-framework = arduino
-; ** Den Thermostat **
-upload_protocol = espota
-upload_port = 192.168.68.66
-lib_deps = 
-	https://github.com/homieiot/homie-esp8266
-	;tzapu/WiFiManager@^0.16.0
-	;knolleary/PubSubClient@^2.8
-	paulstoffregen/OneWire@^2.3.5
-	milesburton/DallasTemperature@^3.9.1
-	evert-arias/EasyButton@^2.0.1
-	;bblanchon/ArduinoJson @ ^6.17.3
-	adafruit/Adafruit GFX Library@^1.10.7
-	adafruit/Adafruit SSD1306@^2.4.4
-	adafruit/Adafruit BusIO@^1.7.3
-monitor_speed = 115200
-
-[env:LocalCOM3]
+[env:local]
 platform = espressif8266
 board = d1
 framework = arduino
@@ -38,12 +18,9 @@ upload_protocol = esptool
 upload_port = COM3
 lib_deps = 
 	https://github.com/homieiot/homie-esp8266
-	;tzapu/WiFiManager@^0.16.0
-	;knolleary/PubSubClient@^2.8
 	paulstoffregen/OneWire@^2.3.5
 	milesburton/DallasTemperature@^3.9.1
 	evert-arias/EasyButton@^2.0.1
-	;bblanchon/ArduinoJson @ ^6.17.3
 	adafruit/Adafruit GFX Library@^1.10.7
 	adafruit/Adafruit SSD1306@^2.4.4
 	adafruit/Adafruit BusIO@^1.7.3
