--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:local]
+[platformio]
+default_envs = local
+
+[env]
 platform = espressif8266
-board = d1
 framework = arduino
-monitor_speed = 115200
-; ** Den Thermostat **
-upload_protocol = esptool
-upload_port = COM3
 lib_deps = 
 	https://github.com/homieiot/homie-esp8266
 	paulstoffregen/OneWire@^2.3.5
@@ -24,4 +22,16 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.10.7
 	adafruit/Adafruit SSD1306@^2.4.4
 	adafruit/Adafruit BusIO@^1.7.3
+board_build.partitions = min_spiffs.csv
 
+[env:local]
+board = d1
+monitor_speed = 115200
+upload_protocol = esptool
+upload_port = COM3
+
+[env:office]
+board = d1
+monitor_speed = 115200
+upload_protocol = espota
+upload_port = 192.168.68.65
