--- a/platformio.ini
+++ b/platformio.ini
@@ -28,10 +28,16 @@ board_build.partitions = min_spiffs.csv
 board = d1
 monitor_speed = 115200
 upload_protocol = esptool
-upload_port = COM3
+upload_port = COM4
 
 [env:office]
 board = d1
 monitor_speed = 115200
 upload_protocol = espota
 upload_port = 192.168.68.65
+
+[env:garage]
+board = nodemcuv2
+monitor_speed = 115200
+upload_protocol = esptool
+upload_port = COM3
